--- a/main.html
+++ b/main.html
@@ -9,8 +9,48 @@
 </head>
 
 <body>
-  <div class="standard">
-    <h3>Hello Testing</h3>
+  <div class="order">
+    <div class="judy">
+      <img src="" alt="Judy">
+    </div>
+    <div class="zhang">
+      <div class="greetings">
+        <h2>Hello!</h2>
+        <p>Welcome to my Portfolio! This is Judy Zhang, an aspiring UI/UX Designer!</p>
+      </div>
+    </div>
+  </div>
+  <div class="order">
+    <div class="subtitle">
+      <h2>Explore</h2>
+    </div>
+    <div class="clickables">
+      <div class="section">
+        <img src="" alt="Art Showcase">
+      </div>
+      <div class="section">
+        <img src="" alt="Code Showcase">
+      </div>
+      <div class="section">
+        <img src="" alt="TBD">
+      </div>
+    </div>
+  </div>
+  <div class="order" id="last">
+    <div class="subtitle" id="last_subtitle">
+      <h2>Stalk Me</h2>
+    </div> 
+    <div class="socials">
+      <div class="link">
+        <a href="https://www.instagram.com/judy.zha/" target="_blank"><img src="" alt="Instagram"></a>
+      </div>
+      <div class="link">
+        <a href="https://www.linkedin.com/in/judy-zhang-/" target="_blank"><img src="" alt="LinkedIn"></a>
+      </div>
+      <div class="link">
+        <a href="https://github.com/JudyZhang05" target="_blank"><img src="" alt="Github"></a>
+      </div>
+    </div>
   </div>
 
 
