--- a/portfolio/drawings.html
+++ b/portfolio/drawings.html
@@ -9,10 +9,10 @@
 </head>
   
 <body>
-  <div id='out'></div>
-  <div id='in'></div>
-  <div class='pic1'>
-    <img src='' alt='pic1'>
+  <div class="outter">
+    <div class="instagram">
+      
+    </div>
   </div>
 
 
