refined the images and started implementing art pieces to the portfolio

--- a/main.html
+++ b/main.html
@@ -26,7 +26,7 @@
     </div>
     <div class="clickables">
       <div class="section">
-        <img src="" alt="Art Showcase">
+        <a href="./portfolio/drawings.html" target="_blank"> <img src="" alt="Art Showcase"></a>
       </div>
       <div class="section">
         <img src="" alt="Code Showcase">
