--- a/portfolio/drawings.html
+++ b/portfolio/drawings.html
@@ -4,14 +4,62 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Judy Zhang Portfolio Illustrations</title>
-  <link href="Illustrations.css" rel="stylesheet" type="text/css" />
+  <title>Judy Zhang Art Showcase</title>
+  <link href="drawings.css" rel="stylesheet" type="text/css" />
 </head>
   
 <body>
-  <div class="outter">
-    <div class="instagram">
-      
+  <div class="title">
+    <h1>Artwork Showcase</h1>
+  </div>
+  <div class="cover">
+    <div class="section">
+      <div class="name">
+        <h3>Instagram</h3>
+      </div>
+      <div class="artwork">
+        <div class="piece">
+          <img src="./instagram/1piece.png" alt="1" width="250">
+        </div>
+        <div class="piece">
+          <img src="./instagram/TBDpiece.png" alt="2" width="250">
+        </div>
+        <div class="piece">
+          <img src="./instagram/3piece.png" alt="3" width="250">
+        </div>
+      </div>
+    </div>
+    <div class="section">
+      <div class="name">
+        <h3>Freelancing</h3>
+      </div>
+      <div class="artwork">
+        <div class="piece">
+          <img src="" alt="1">
+        </div>
+        <div class="piece">
+          <img src="" alt="2">
+        </div>
+        <div class="piece">
+          <img src="" alt="3">
+        </div>
+      </div>
+    </div>
+    <div class="section">
+      <div class="name">
+        <h3>Figma | Other</h3>
+      </div>
+      <div class="artwork">
+        <div class="piece">
+          <img src="" alt="1">
+        </div>
+        <div class="piece">
+          <img src="" alt="2">
+        </div>
+        <div class="piece">
+          <img src="" alt="3">
+        </div>
+      </div>
     </div>
   </div>
 
