added more images

--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 <body class="back">
   <div class="order">
     <div class="judy">
-      <img src="" alt="Judy">
+      <img src="./portfolio/instagram/2piece.png" alt="Judy" width="300">
     </div>
     <div class="zhang">
       <div class="greetings">
