--- a/portfolio/drawings.html
+++ b/portfolio/drawings.html
@@ -19,13 +19,13 @@
       </div>
       <div class="artwork">
         <div class="piece">
-          <img src="./instagram/1piece.png" alt="1" width="250">
+          <img src="./instagram/1piece.png" alt="1">
         </div>
         <div class="piece">
-          <img src="./instagram/TBDpiece.png" alt="2" width="250">
+          <img src="./instagram/TBDpiece.png" alt="2">
         </div>
         <div class="piece">
-          <img src="./instagram/3piece.png" alt="3" width="250">
+          <img src="./instagram/3piece.png" alt="3">
         </div>
       </div>
     </div>
@@ -35,13 +35,13 @@
       </div>
       <div class="artwork">
         <div class="piece">
-          <img src="" alt="1">
+          <img src="./freelance/newyear.png" alt="1">
         </div>
         <div class="piece">
-          <img src="" alt="2">
+          <img src="./freelance/perfectdaisy.jpg" alt="2">
         </div>
         <div class="piece">
-          <img src="" alt="3">
+          <img src="./freelance/dragonfruit.png" alt="3">
         </div>
       </div>
     </div>
