--- a/main.html
+++ b/main.html
@@ -20,35 +20,37 @@
       </div>
     </div>
   </div>
-  <div class="order">
-    <div class="subtitle">
-      <h2>Explore</h2>
+  <div id="cover">
+    <div class="order">
+      <div class="subtitle">
+        <h2>Explore</h2>
+      </div>
+      <div class="clickables">
+        <div class="section">
+          <a href="./portfolio/drawings.html" target="_blank"> <img src="" alt="Art Showcase"></a>
+        </div>
+        <div class="section">
+          <img src="" alt="Code Showcase">
+        </div>
+        <div class="section">
+          <img src="" alt="TBD">
+        </div>
+      </div>
     </div>
-    <div class="clickables">
-      <div class="section">
-        <a href="./portfolio/drawings.html" target="_blank"> <img src="" alt="Art Showcase"></a>
-      </div>
-      <div class="section">
-        <img src="" alt="Code Showcase">
-      </div>
-      <div class="section">
-        <img src="" alt="TBD">
-      </div>
-    </div>
-  </div>
-  <div class="order" id="last">
-    <div class="subtitle" id="last_subtitle">
-      <h2>Connect</h2>
-    </div> 
-    <div class="socials">
-      <div class="link">
-        <a href="https://www.instagram.com/judy.zha/" target="_blank"><img src="./assests/instagram.png" alt="Instagram" width="100"></a>
-      </div>
-      <div class="link">
-        <a href="https://www.linkedin.com/in/judy-zhang-/" target="_blank"><img src="./assests/linkedin.png" alt="LinkedIn" width="100"></a>
-      </div>
-      <div class="link">
-        <a href="https://github.com/JudyZhang05" target="_blank"><img src="./assests/github.png" alt="Github" width="100"></a>
+    <div class="order">
+      <div class="subtitle" id="last_subtitle">
+        <h2>Connect</h2>
+      </div> 
+      <div class="socials">
+        <div class="link">
+          <a href="https://www.instagram.com/judy.zha/" target="_blank"><img src="./assests/instagram.png" alt="Instagram" width="100"></a>
+        </div>
+        <div class="link">
+          <a href="https://www.linkedin.com/in/judy-zhang-/" target="_blank"><img src="./assests/linkedin.png" alt="LinkedIn" width="100"></a>
+        </div>
+        <div class="link">
+          <a href="https://github.com/JudyZhang05" target="_blank"><img src="./assests/github.png" alt="Github" width="100"></a>
+        </div>
       </div>
     </div>
   </div>
