--- a/portfolio/drawings.html
+++ b/portfolio/drawings.html
@@ -15,6 +15,22 @@
   <div class="cover">
     <div class="section">
       <div class="name">
+        <h3>Figma | Other</h3>
+      </div>
+      <div class="artwork">
+        <div class="piece">
+          <img src="./other/Jolly.png" alt="1">
+        </div>
+        <div class="piece">
+          <img src="./other/Jolly.png" alt="2">
+        </div>
+        <div class="piece">
+          <img src="./other/Jolly.png" alt="3">
+        </div>
+      </div>
+    </div>
+    <div class="section">
+      <div class="name">
         <h3>Instagram</h3>
       </div>
       <div class="artwork">
@@ -42,22 +58,6 @@
         </div>
         <div class="piece">
           <img src="./freelance/dragonfruit.png" alt="3">
-        </div>
-      </div>
-    </div>
-    <div class="section">
-      <div class="name">
-        <h3>Figma | Other</h3>
-      </div>
-      <div class="artwork">
-        <div class="piece">
-          <img src="" alt="1">
-        </div>
-        <div class="piece">
-          <img src="" alt="2">
-        </div>
-        <div class="piece">
-          <img src="" alt="3">
         </div>
       </div>
     </div>
