fixed design and added more

--- a/index.html
+++ b/index.html
@@ -9,37 +9,44 @@
 </head>
 
 <body class="back">
+  <!-- <div class="order">
+    <div class="welcome">
+      <h1>Hello! Welcome! はじめまして！</h1>
+    </div>
+  </div> -->
   <div class="order">
     <div class="judy">
       <img src="./portfolio/instagram/2piece.png" alt="Judy" width="300">
     </div>
     <div class="zhang">
       <div class="greetings">
-        <h2>Hello!</h2>
-        <p>Welcome to my Portfolio! This is Judy Zhang, an aspiring UI/UX Designer!</p>
+        <h2>Welcome to my Portfolio!</h2>
+        <p>This is Judy Zhang, an Artist and aspiring UI/UX Designer!</p>
       </div>
     </div>
   </div>
-  <div id="cover">
     <div class="order">
       <div class="subtitle">
         <h2>Explore</h2>
       </div>
       <div class="clickables">
         <div class="section">
-          <a href="./portfolio/drawings.html" target="_blank"> <img src="" alt="Art Showcase"></a>
+          <a href="./portfolio/drawings.html" target="_blank"> <img src="./portfolio/other/temp cover.png" width="200" alt="Artwork Showcase"></a>
+          <a href="./portfolio/drawings.html" target="_blank"> <h3>Artwork Showcase</h3> </a>
         </div>
         <div class="section">
-          <img src="" alt="Code Showcase">
+          <img src="./portfolio/other/temp cover.png" width="200" alt="Code Showcase">
+          <h3>Code Showcase</h3>
         </div>
         <div class="section">
-          <img src="" alt="TBD">
+          <img src="./portfolio/other/temp cover.png" width="200" alt="TBD">
+          <h3>TBD</h3>
         </div>
       </div>
     </div>
     <div class="order">
       <div class="subtitle" id="last_subtitle">
-        <h2>Connect</h2>
+        <h2>Learn More</h2>
       </div> 
       <div class="socials">
         <div class="link">
@@ -53,7 +60,6 @@
         </div>
       </div>
     </div>
-  </div>
 
 
 
