--- a/portfolio/drawings.html
+++ b/portfolio/drawings.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
-  <title>Judy Zhang Art Showcase</title>
+  <title>Judy Zhang Artwork Showcase</title>
   <link href="drawings.css" rel="stylesheet" type="text/css" />
 </head>
   
 <body>
   <div class="title">
-    <h1>Artwork Showcase</h1>
+    <h1>ARTWORK SHOWCASE</h1>
   </div>
   <div class="cover">
     <div class="section">
