--- a/index.html
+++ b/index.html
@@ -46,17 +46,17 @@
     </div>
     <div class="order">
       <div class="subtitle" id="last_subtitle">
-        <h2>Learn More</h2>
+        <h2>Get In Touch</h2>
       </div> 
       <div class="socials">
         <div class="link">
-          <a href="https://www.instagram.com/judy.zha/" target="_blank"><img src="./assests/instagram.png" alt="Instagram" width="100"></a>
+          <a href="https://github.com/JudyZhang05" target="_blank"><img src="./assests/github.png" alt="Github" width="100"></a>
         </div>
         <div class="link">
           <a href="https://www.linkedin.com/in/judy-zhang-/" target="_blank"><img src="./assests/linkedin.png" alt="LinkedIn" width="100"></a>
         </div>
         <div class="link">
-          <a href="https://github.com/JudyZhang05" target="_blank"><img src="./assests/github.png" alt="Github" width="100"></a>
+          <a href="https://www.instagram.com/judy.zha/" target="_blank"><img src="./assests/instagram.png" alt="Instagram" width="100"></a>
         </div>
       </div>
     </div>
