--- a/portfolio/drawings.html
+++ b/portfolio/drawings.html
@@ -22,7 +22,7 @@
           <img src="./other/Jolly.png" alt="1">
         </div>
         <div class="piece">
-          <img src="./other/Jolly.png" alt="2">
+          <img src="./other/Jweb.png" width="500" alt="2">
         </div>
         <div class="piece">
           <img src="./other/Jolly.png" alt="3">
