--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
           <a href="./portfolio/drawings.html" target="_blank"> <h3>Artwork Showcase</h3> </a>
         </div>
         <div class="section">
-          <img src="./portfolio/other/temp cover.png" width="200" alt="Code Showcase">
-          <h3>Code Showcase</h3>
+          <a href="./portfolio/code.html" target="_blank"> <img src="./portfolio/other/temp cover.png" width="200" alt="Code Showcase"></a>
+          <a href="./portfolio/code.html" target="_blank"><h3>Code Showcase</h3></a>
         </div>
         <div class="section">
           <img src="./portfolio/other/temp cover.png" width="200" alt="TBD">
