--- a/portfolio/drawings.html
+++ b/portfolio/drawings.html
@@ -19,10 +19,10 @@
       </div>
       <div class="artwork">
         <div class="piece">
-          <img src="./other/Jolly.png" alt="1">
+          <a href="https://www.figma.com/file/sCQhQaf3LQ5B2hulXQC0Nb/Granted?type=design&node-id=0%3A1&t=93jyY9FluiX3rxTw-1" target="_blank"> <img src="./other/Gweb.png" alt="1"></a>
         </div>
         <div class="piece">
-          <img src="./other/Jweb.png" width="500" alt="2">
+          <a href="https://www.figma.com/file/M9MvJdaK19Hvd9Vbf0Zown/Jolly-Design-Prototype?type=design&node-id=0%3A1&t=qx9VoE17ZlJoMMMC-1" target="_blank"> <img src="./other/Jweb.png" width="350" alt="2"></a>
         </div>
         <div class="piece">
           <img src="./other/Jolly.png" alt="3">
@@ -54,7 +54,7 @@
           <img src="./freelance/newyear.png" alt="1">
         </div>
         <div class="piece">
-          <img src="./freelance/perfectdaisy.jpg" alt="2">
+          <img src="./freelance/perfectdaisy.png" alt="2">
         </div>
         <div class="piece">
           <img src="./freelance/dragonfruit.png" alt="3">
