implemented code showcase

--- a/portfolio/code.html
+++ b/portfolio/code.html
@@ -8,6 +8,60 @@
     <link href="code.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
+    <div class="title">
+        <h1>CODE SHOWCASE</h1>
+    </div>
+    <div class="order">
+        <div class="project">
+            <h2>KLICKY</h2>
+            <div class="case">
+                <div class="show">
+                    <img src="../code port/linklicky.gif" width="650" alt="project 1"> 
+                </div>
+                <div class="show">
+                    <div class="evidence">
+                        <a href="https://docs.google.com/presentation/d/1Zzm7Qs5_9GTFmAKwpQTvHf3G5OM4vOT1EWolWaOZswM/edit?usp=sharing" target="_blank"> <img src="../code port/link.png" width="250"></a>
+                        <a href="https://github.com/gschultz49/klicky" target="_blank"> <img src="../code port/linkgit.png" width="250"> </a>              
+                    </div>
+                </div>
+            </div>
+                <div class="explain">
+                <h4>Project Description</h4>
+                <p>The Klicky Project is a team-based task developed, overseered, and made possible by LinkedIn, Breakthrough Tech, and Magnit Global. The group consisted of 5 college undergraduates, including myself. We worked
+                    collaboratively to modify a LinkedIn clone website and track the user's interaction. Throughout the development of Klicky, we split into 2 different groups dedicated to various areas of the project. I was tasked with 
+                HTML/CSS and  Firebase Database Team. In HTML/CSS, I utilized my knowledge in HTML/CSS and focused primarily on the presentation of the website, some tasks I completed were adding new sections to the website to diversify the 
+                interactions available to the user, manipulated the scale of individual sections, added posts to replicate an active platform, creating mouse effects for a more engaging experience, and more. In the Firebase Database team, I focused on 
+                collecting and keeping track of user's interaction with the webpage and adding them to a firebase database. When the user clicks on a button or anywhere on the screen, it would automatically append itself to the database instantly.</p>
+            </div>
+        </div>
+        <div class="project">
+            <h2>Name of Project</h2>
+            <a href="" target="_blank"> <img src="./other/Jolly.png" alt="project 2"> </a>
+            <div class="explain">
+                <h4>Project Description</h4>
+                <p>2Project this and that</p>
+            </div>
+        </div>
+        <div class="project">
+            <h2>Name of Project</h2>
+            <a href="" target="_blank"> <img src="./other/Jolly.png" alt="project 3"> </a>
+            <div class="explain">
+                <h4>Project Description</h4>
+                <p>3Project this and that</p>
+            </div>
+        </div>
+        <!-- test -->
+        <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+        <a class="next" onclick="plusSlides(1)">&#10095;</a>
+    </div>
+
+    <div style="text-align:center">
+        <span class="dot" onclick="currentSlide(1)"></span>
+        <span class="dot" onclick="currentSlide(2)"></span>
+        <span class="dot" onclick="currentSlide(3)"></span>
+      </div>
     
+    <script src="code.js"></script>
+
 </body>
 </html>
