--- a/index.html
+++ b/index.html
@@ -27,20 +27,20 @@
   </div>
     <div class="order">
       <div class="subtitle">
-        <h2>Explore</h2>
+        <h2>Showcase</h2>
       </div>
       <div class="clickables">
         <div class="section">
           <a href="./portfolio/drawings.html" target="_blank"> <img src="./portfolio/other/temp cover.png" width="200" alt="Artwork Showcase"></a>
-          <a href="./portfolio/drawings.html" target="_blank"> <h3>Artwork Showcase</h3> </a>
+          <a href="./portfolio/drawings.html" target="_blank"> <h3>Art</h3> </a>
         </div>
         <div class="section">
           <a href="./portfolio/code.html" target="_blank"> <img src="./portfolio/other/temp cover.png" width="200" alt="Code Showcase"></a>
-          <a href="./portfolio/code.html" target="_blank"><h3>Code Showcase</h3></a>
+          <a href="./portfolio/code.html" target="_blank"><h3>Code</h3></a>
         </div>
         <div class="section">
           <img src="./portfolio/other/temp cover.png" width="200" alt="TBD">
-          <h3>TBD</h3>
+          <h3>Archive</h3>
         </div>
       </div>
     </div>
