--- a/portfolio/drawings.html
+++ b/portfolio/drawings.html
@@ -13,7 +13,7 @@
     <h1>ARTWORK SHOWCASE</h1>
   </div>
   <div class="cover">
-    <div class="section">
+    <div class="section" id="insta">
       <div class="name">
         <h3>Instagram</h3>
       </div>
@@ -29,7 +29,7 @@
         </div>
       </div>
     </div>
-    <div class="section">
+    <div class="section" id="free">
       <div class="name">
         <h3>Freelancing</h3>
       </div>
@@ -45,7 +45,7 @@
         </div>
       </div>
     </div>
-    <div class="section">
+    <div class="section" id="figma">
       <div class="name">
         <h3>Figma | Other</h3>
       </div>
