--- a/index.html
+++ b/index.html
@@ -31,8 +31,12 @@
       </div>
       <div class="clickables">
         <div class="section">
-          <a href="./portfolio/drawings.html" target="_blank"> <img src="./portfolio/other/temp cover.png" width="200" alt="Artwork Showcase"></a>
-          <a href="./portfolio/drawings.html" target="_blank"> <h3>Art</h3> </a>
+          <div class="clickimage">
+            <a href="./portfolio/drawings.html" target="_blank"> <img src="./portfolio/other/temp cover.png" width="200" alt="Artwork Showcase"></a>
+          </div>
+          <div class="clicksub">
+            <a href="./portfolio/drawings.html" target="_blank"> <h3>Art</h3> </a>
+          </div>
         </div>
         <div class="section">
           <a href="./portfolio/code.html" target="_blank"> <img src="./portfolio/other/temp cover.png" width="200" alt="Code Showcase"></a>
