--- a/index.html
+++ b/index.html
@@ -14,6 +14,27 @@
       <h1>Hello! Welcome! はじめまして！</h1>
     </div>
   </div> -->
+
+  <!-- <div class="navhead">
+    <ul>
+      <li id="headname"><a href="">Judy Zhang</a></li>
+      <div class="option">
+        <li style="float:right"><a href="">Archive</a></li>
+        <li style="float:right"><a href="./code port/code.html">Code</a></li>
+        <li style="float:right"><a href="./portfolio/drawings.html">Art</a></li>        
+      </div>
+    </ul>
+  </div> -->
+
+  <div class="navbar">
+    <a class="myname" href="">Judy Zhang</a>
+    <div class="options">
+      <a href="">Archive</a>
+      <a href="./code port/code.html">Code</a>
+      <a href="./portfolio/drawings.html">Art</a>
+    </div>
+  </div>
+  
   <div class="order">
     <div class="judy">
       <img src="./portfolio/instagram/2piece.png" alt="Judy" width="300">
@@ -31,16 +52,16 @@
       </div>
       <div class="clickables">
         <div class="section">
-          <div class="clickimage">
-            <a href="./portfolio/drawings.html" target="_blank"> <img src="./portfolio/other/temp cover.png" width="200" alt="Artwork Showcase"></a>
-          </div>
-          <div class="clicksub">
-            <a href="./portfolio/drawings.html" target="_blank"> <h3>Art</h3> </a>
-          </div>
+          <!-- <div class="clickimage"> -->
+            <a href="./portfolio/drawings.html"> <img src="./portfolio/other/temp cover.png" width="200" alt="Artwork Showcase"></a>
+          <!-- </div>
+          <div class="clicksub"> -->
+            <a href="./portfolio/drawings.html"> <h3>Art</h3> </a>
+          <!-- </div> -->
         </div>
         <div class="section">
-          <a href="./portfolio/code.html" target="_blank"> <img src="./portfolio/other/temp cover.png" width="200" alt="Code Showcase"></a>
-          <a href="./portfolio/code.html" target="_blank"><h3>Code</h3></a>
+          <a href="./code port/code.html" target="_blank"> <img src="./portfolio/other/temp cover.png" width="200" alt="Code Showcase"></a>
+          <a href="./code port/code.html" target="_blank"><h3>Code</h3></a>
         </div>
         <div class="section">
           <img src="./portfolio/other/temp cover.png" width="200" alt="TBD">
