--- a/code port/code.html
+++ b/code port/code.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Judy Zhang Code Showcase</title>
-    <link href="code.css" rel="stylesheet" type="text/css" />
+    <link href="../code port/code.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
     <div class="title">
@@ -36,7 +36,7 @@
         </div>
         <div class="project">
             <h2>Name of Project</h2>
-            <a href="" target="_blank"> <img src="./other/Jolly.png" alt="project 2"> </a>
+            <a href="" target="_blank"> <img src="../portfolio/other/Jolly.png" alt="project 2"> </a>
             <div class="explain">
                 <h4>Project Description</h4>
                 <p>2Project this and that</p>
@@ -44,7 +44,7 @@
         </div>
         <div class="project">
             <h2>Name of Project</h2>
-            <a href="" target="_blank"> <img src="./other/Jolly.png" alt="project 3"> </a>
+            <a href="" target="_blank"> <img src="../portfolio/other/Jolly.png" alt="project 3"> </a>
             <div class="explain">
                 <h4>Project Description</h4>
                 <p>3Project this and that</p>
@@ -61,7 +61,7 @@
         <span class="dot" onclick="currentSlide(3)"></span>
       </div>
     
-    <script src="code.js"></script>
+    <script src="../code port/code.js"></script>
 
 </body>
 </html>
