rough draft and navbar still needs altering

--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
 
   <div class="navbar">
     <a class="myname" href="">Judy Zhang</a>
-    <div class="options">
+    <!-- <div class="options"> -->
       <a href="">Archive</a>
       <a href="./code port/code.html">Code</a>
       <a href="./portfolio/drawings.html">Art</a>
-    </div>
+    <!-- </div> -->
   </div>
   
   <div class="order">
