more underwhelming commits

--- a/index.html
+++ b/index.html
@@ -26,13 +26,15 @@
     </ul>
   </div> -->
 
-  <div class="navbar">
-    <a class="myname" href="">Judy Zhang</a>
-    <!-- <div class="options"> -->
-      <a href="">Archive</a>
-      <a href="./code port/code.html">Code</a>
-      <a href="./portfolio/drawings.html">Art</a>
-    <!-- </div> -->
+  <div class="outernav">
+    <div class="navbar">
+      <a class="myname" href="">Judy Zhang</a>
+      <div class="options">
+        <a href="">Archive</a>
+        <a href="./code port/code.html">Code</a>
+        <a href="./portfolio/drawings.html">Art</a>
+      </div>
+    </div>
   </div>
   
   <div class="order">
