--- a/index.html
+++ b/index.html
@@ -26,15 +26,13 @@
     </ul>
   </div> -->
 
-  <div class="outernav">
-    <div class="navbar">
-      <a class="myname" href="">Judy Zhang</a>
-      <div class="options">
-        <a href="">Archive</a>
-        <a href="./code port/code.html">Code</a>
-        <a href="./portfolio/drawings.html">Art</a>
-      </div>
-    </div>
+  <div class="navbar">
+    <a class="myname" href="">Judy Zhang</a>
+    <!-- <div class="options"> -->
+    <a href="./portfolio/drawings.html">Art</a>
+    <a href="./code port/code.html">Code</a>
+    <a href="">Archive</a>
+        <!-- </div> -->
   </div>
   
   <div class="order">
