revised version however needs more update in code showcase

--- a/index.html
+++ b/index.html
@@ -26,13 +26,11 @@
     </ul>
   </div> -->
 
-  <div class="navbar">
+  <div class="navbar" id="navbar">
     <a class="myname" href="">Judy Zhang</a>
-    <!-- <div class="options"> -->
     <a href="./portfolio/drawings.html">Art</a>
     <a href="./code port/code.html">Code</a>
     <a href="">Archive</a>
-        <!-- </div> -->
   </div>
   
   <div class="order">
