--- a/portfolio/drawings.html
+++ b/portfolio/drawings.html
@@ -9,6 +9,14 @@
 </head>
   
 <body>
+
+  <div class="navbar" id="navbar">
+    <a class="myname" href="../index.html">Judy Zhang</a>
+    <a href="./portfolio/drawings.html">Art</a>
+    <a href="./code port/code.html">Code</a>
+    <a href="">Archive</a>
+  </div>
+
   <div class="title">
     <h1>ARTWORK SHOWCASE</h1>
   </div>
@@ -65,7 +73,7 @@
 
 
 
-    <script src="script.js"></script>
+    <script src="drawings.js"></script>
 
 </body>
 
