--- a/code port/code.html
+++ b/code port/code.html
@@ -27,7 +27,7 @@
             </div>
                 <div class="explain">
                 <h4>Project Description</h4>
-                <p>The Klicky Project is a team-based task developed, overseered, and made possible by LinkedIn, Breakthrough Tech, and Magnit Global. The group consisted of 5 college undergraduates, including myself. We worked
+                <p>The Klicky Project is a team-based task developed, overseered, and made possible by the WIT in LinkedIn, Breakthrough Tech, and Magnit Global. The group consisted of 5 college undergraduates, including myself. We worked
                     collaboratively to modify a LinkedIn clone website and track the user's interaction. Throughout the development of Klicky, we split into 2 different groups dedicated to various areas of the project. I was tasked with 
                 HTML/CSS and  Firebase Database Team. In HTML/CSS, I utilized my knowledge in HTML/CSS and focused primarily on the presentation of the website, some tasks I completed were adding new sections to the website to diversify the 
                 interactions available to the user, manipulated the scale of individual sections, added posts to replicate an active platform, creating mouse effects for a more engaging experience, and more. In the Firebase Database team, I focused on 
