altered code showcase

--- a/code port/code.html
+++ b/code port/code.html
@@ -8,6 +8,13 @@
     <link href="../code port/code.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
+    <div class="navbar" id="navbar">
+        <a class="myname" href="../index.html">Judy Zhang</a>
+        <a href="../portfolio/drawings.html">Art</a>
+        <a href="">Code</a>
+        <a href="">Archive</a>
+    </div>
+
     <div class="title">
         <h1>CODE SHOWCASE</h1>
     </div>
