--- a/portfolio/drawings.html
+++ b/portfolio/drawings.html
@@ -12,8 +12,8 @@
 
   <div class="navbar" id="navbar">
     <a class="myname" href="../index.html">Judy Zhang</a>
-    <a href="./portfolio/drawings.html">Art</a>
-    <a href="./code port/code.html">Code</a>
+    <a href="">Art</a>
+    <a href="../code port/code.html">Code</a>
     <a href="">Archive</a>
   </div>
 
