--- a/code port/code.html
+++ b/code port/code.html
@@ -29,8 +29,12 @@
                 </div>
                 <div class="show">
                     <div class="evidence">
-                        <a href="https://docs.google.com/presentation/d/1Zzm7Qs5_9GTFmAKwpQTvHf3G5OM4vOT1EWolWaOZswM/edit?usp=sharing" target="_blank"> <img src="../code port/link.png" width="250"></a>
-                        <a href="https://github.com/gschultz49/klicky" target="_blank"> <img src="../code port/linkgit.png" width="250"> </a>              
+                        <div class="linkslide" id="linkshow"> 
+                            <a href="https://docs.google.com/presentation/d/1Zzm7Qs5_9GTFmAKwpQTvHf3G5OM4vOT1EWolWaOZswM/edit?usp=sharing" target="_blank"> <img src="../code port/link.png" width="250"></a> 
+                        </div> 
+                        <div class="linkgit" id="linkhub"> 
+                            <a href="https://github.com/gschultz49/klicky" target="_blank"> <img src="../code port/linkgit.png" width="250"> </a> 
+                        </div> 
                     </div>
                 </div>
             </div>
@@ -59,7 +63,7 @@
                 <p>3Project this and that</p>
             </div>
         </div>
-        <!-- test -->
+
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
         <a class="next" onclick="plusSlides(1)">&#10095;</a>
     </div>
