altered navbar in homepage: final format but needs hover adjustments

--- a/index.html
+++ b/index.html
@@ -10,22 +10,31 @@
 
 <body class="back">
 
-  <!-- <div class="navhead">
-    <ul>
-      <li id="headname"><a href="">Judy Zhang</a></li>
-      <div class="option">
-        <li style="float:right"><a href="">Archive</a></li>
-        <li style="float:right"><a href="./code port/code.html">Code</a></li>
-        <li style="float:right"><a href="./portfolio/drawings.html">Art</a></li>        
-      </div>
-    </ul>
-  </div> -->
+  <div class="navwrap">
+    <div class="gradient-bar"></div>
 
-  <div class="navbar" id="navbar">
-    <a class="myname" href="">Judy Zhang</a>
-    <a href="./portfolio/drawings.html">Art</a>
-    <a href="./code port/code.html">Code</a>
-    <a href="./TBD/tbd.html">Archive</a>
+    <!-- <div class="navbar" id="navbar">
+      <a class="myname" href="">Judy Zhang</a>
+      <a class="skip"></a>
+      <a href="./portfolio/drawings.html">Art</a>
+      <a href="./code port/code.html">Code</a>
+      <a href="./TBD/tbd.html">Archive</a>
+    </div> -->
+
+    <nav class="navbar">
+      <li id="headname"><a href="">Judy Zhang</a></li>
+      <div class="menu-toggle">
+        <span class="bar"></span>
+        <span class="bar"></span>
+        <span class="bar"></span>
+      </div>
+      <ul class="nav no-search">
+        <li class="nav-item"><a href="./portfolio/drawings.html">Art</a></li> 
+        <li class="nav-item"><a href="./code port/code.html">Code</a></li>   
+        <li class="nav-item"><a href="./TBD/tbd.html">Archive</a></li>
+        <li class="nav-item"><a href="">Contact</a></li>
+      </ul>
+    </nav>
   </div>
   
   <div class="order">
@@ -58,7 +67,7 @@
         </div>
       </div>
     </div>
-    <div class="order">
+    <!-- <div class="order">
       <div class="subtitle" id="last_subtitle">
         <h2>Get In Touch</h2>
       </div> 
@@ -73,7 +82,7 @@
           <a href="https://www.instagram.com/judy.zha/" target="_blank"><img src="./assests/instagram.png" alt="Instagram" width="100"></a>
         </div>
       </div>
-    </div>
+    </div> -->
 
 
 
