--- a/TBD/tbd.html
+++ b/TBD/tbd.html
@@ -7,10 +7,9 @@
     <link href="tbd.css" rel="stylesheet" type="text/css" />
 </head>
 <body>
-    <div class="temp">
-        <div class="test">
-            <h5>hello</h5>
-        </div>
-    </div>
+
+
+
+    <script src="tbd.js"></script>
 </body>
 </html>
