major alterations to previous design, actually its a whole revamp, includes responsive activity however needs more consistent tocuhes to other branches of the actual porfolio

--- a/code port/code.html
+++ b/code port/code.html
@@ -10,19 +10,23 @@
 
 <body>
 
-  <div class="navbar" id="navbar">
-    <a class="myname" href="../index.html">Judy Zhang</a>
-    <a href="../portfolio/drawings.html">Art</a>
-    <a href="">Code</a>
-    <a href="">Archive</a>
-  </div>
+    <div class="navwrap">
+        <div class="gradient-bar"></div>
+        <div class="navbar" id="navbar">
+          <a class="myname" href="../index.html">Judy Zhang</a>
+          <a class="skip"></a>
+          <a href="../portfolio/drawings.html">Art</a>
+          <a href="../code port/code.html">Code</a>
+          <a href="../contact/contact.html">Contact</a>
+        </div>
+    </div>
 
     <div class="title">
         <h1>CODE SHOWCASE</h1>
     </div>
     <div class="order">
         <div class="project">
-            <h2>KLICKY</h2>
+            <h2>Project: KLICKY</h2>
             <div class="case">
                 <div class="show">
                     <img src="../code port/linklicky.gif" width="650" alt="project 1"> 
