--- a/index.html
+++ b/index.html
@@ -5,65 +5,46 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width">
   <title>Judy Zhang</title>
+  <link rel="icon" type="image/x-icon" href="./portfolio/other/Jolly.png">
   <link href="design.css" rel="stylesheet" type="text/css" />
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@200&display=swap" rel="stylesheet">
 </head>
 
 <body class="back">
-
-  <div class="navwrap">
-    <div class="gradient-bar"></div>
-
-    <!-- <div class="navbar" id="navbar">
-      <a class="myname" href="">Judy Zhang</a>
-      <a class="skip"></a>
-      <a href="./portfolio/drawings.html">Art</a>
-      <a href="./code port/code.html">Code</a>
-      <a href="./TBD/tbd.html">Archive</a>
-    </div> -->
-
-    <nav class="navbar">
-      <li id="headname"><a href="">Judy Zhang</a></li>
-      <div class="menu-toggle">
-        <span class="bar"></span>
-        <span class="bar"></span>
-        <span class="bar"></span>
-      </div>
-      <ul class="nav no-search">
-        <li class="nav-item"><a href="./portfolio/drawings.html">Art</a></li> 
-        <li class="nav-item"><a href="./code port/code.html">Code</a></li>   
-        <li class="nav-item"><a href="./TBD/tbd.html">Archive</a></li>
-        <li class="nav-item"><a href="">Contact</a></li>
-      </ul>
-    </nav>
-  </div>
   
-  <div class="order">
+  <div class="order" id="judyzhang">
     <div class="judy">
-      <img src="./portfolio/instagram/2piece.png" alt="Judy" width="300">
+      <img src="./portfolio/instagram/2piece.png" alt="Judy">
     </div>
     <div class="zhang">
       <div class="greetings">
-        <h2>Welcome to my Portfolio!</h2>
-        <p>This is Judy Zhang, an Artist and aspiring UI/UX Designer!</p>
+        <!-- <h2>Welcome to my Portfolio!</h2> -->
+        <div class="welcome">
+          <h2 id="w">WELCOME</h2>
+          <h2 id="e">TO</h2>
+          <h2 id="l">MY</h2>
+          <h2 id="c">PORTFOLIO!</h2>
+        </div>
+        <h3>My name is Judy Zhang, I am an artist and aspiring UI/UX designer!</h3>
       </div>
     </div>
   </div>
     <div class="order">
-      <div class="subtitle">
-        <h2>Showcase</h2>
-      </div>
       <div class="clickables">
-        <div class="section">
-            <a href="./portfolio/drawings.html"> <img src="./portfolio/other/temp cover.png" width="200" alt="Artwork Showcase"></a>
-            <a href="./portfolio/drawings.html"> <h3>Art</h3> </a>
+        <div class="section" id="first">
+            <a href="./portfolio/drawings.html"><img src="./portfolio/other/temp cover.png"alt="Artwork Showcase"></a>
+            <a href="./portfolio/drawings.html"><h2>Art</h2></a>
         </div>
-        <div class="section">
-          <a href="./code port/code.html" target="_blank"> <img src="./portfolio/other/temp cover.png" width="200" alt="Code Showcase"></a>
-          <a href="./code port/code.html" target="_blank"><h3>Code</h3></a>
+        <div class="section" id="second">
+          <a href="./code port/code.html"><img src="./portfolio/other/temp cover.png" alt="Code Showcase"></a>
+          <a href="./code port/code.html"><h2>Code</h2></a>
         </div>
-        <div class="section">
-          <img src="./portfolio/other/temp cover.png" width="200" alt="TBD">
-          <h3>Archive</h3>
+        <div class="section" id="third">
+          <a href="./contact/contact.html"><img src="./portfolio/other/contact.png"alt="TBD"></a>
+          <a href="./contact/contact.html"><h2>Contact</h2></a>
         </div>
       </div>
     </div>
