--- a/portfolio/drawings.html
+++ b/portfolio/drawings.html
@@ -10,11 +10,15 @@
   
 <body>
 
-  <div class="navbar" id="navbar">
-    <a class="myname" href="../index.html">Judy Zhang</a>
-    <a href="">Art</a>
-    <a href="../code port/code.html">Code</a>
-    <a href="">Archive</a>
+  <div class="navwrap">
+    <div class="gradient-bar"></div>
+    <div class="navbar" id="navbar">
+      <a class="myname" href="../index.html">Judy Zhang</a>
+      <a class="skip"></a>
+      <a href="../portfolio/drawings.html">Art</a>
+      <a href="../code port/code.html">Code</a>
+      <a href="../contact/contact.html">Contact</a>
+    </div>
   </div>
 
   <div class="title">
