--- a/index.html
+++ b/index.html
@@ -21,18 +21,19 @@
     </div>
     <div class="zhang">
       <div class="greetings">
-        <!-- <h2>Welcome to my Portfolio!</h2> -->
         <div class="welcome">
           <h2 id="w">WELCOME</h2>
-          <h2 id="e">TO</h2>
-          <h2 id="l">MY</h2>
+          <div class="shorten">
+            <h2 id="e">TO</h2>
+            <h2 id="l">MY</h2>
+          </div>
           <h2 id="c">PORTFOLIO!</h2>
         </div>
         <h3>My name is Judy Zhang, I am an artist and aspiring UI/UX designer!</h3>
       </div>
     </div>
   </div>
-    <div class="order">
+    <div class="order" id="showcase">
       <div class="clickables">
         <div class="section" id="first">
             <a href="./portfolio/drawings.html"><img src="./portfolio/other/temp cover.png"alt="Artwork Showcase"></a>
