added responsive sizes from mobile to smaller laptop (exception of heights)

--- a/index.html
+++ b/index.html
@@ -6,7 +6,11 @@
   <meta name="viewport" content="width=device-width">
   <title>Judy Zhang</title>
   <link rel="icon" type="image/x-icon" href="./portfolio/other/Jolly.png">
+  
+  <!-- main css -->
   <link href="design.css" rel="stylesheet" type="text/css" />
+
+  <!-- <link href="tempfile.css" rel="stylesheet" type="text/css"> -->
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -26,7 +30,7 @@
           <div class="shorten">
             <h2 id="e">TO</h2>
             <h2 id="l">MY</h2>
-          </div>
+        </div>
           <h2 id="c">PORTFOLIO!</h2>
         </div>
         <h3>My name is Judy Zhang, I am an artist and aspiring UI/UX designer!</h3>
