--- a/portfolio/drawings.html
+++ b/portfolio/drawings.html
@@ -46,13 +46,13 @@
       </div>
       <div class="artwork">
         <div class="piece">
-          <img src="./freelance/newyear.png" alt="1">
+          <img src="./freelance/newyear.png" alt="4">
         </div>
         <div class="piece">
-          <img src="./freelance/perfectdaisy.png" alt="2">
+          <img src="./freelance/perfectdaisy.png" alt="5">
         </div>
         <div class="piece">
-          <img src="./freelance/dragonfruit.png" alt="3">
+          <img src="./freelance/dragonfruit.png" alt="6">
         </div>
       </div>
     </div>
@@ -62,18 +62,31 @@
       </div>
       <div class="artwork">
         <div class="piece">
-          <a href="https://www.figma.com/file/sCQhQaf3LQ5B2hulXQC0Nb/Granted?type=design&node-id=0%3A1&t=93jyY9FluiX3rxTw-1" target="_blank"> <img src="./other/Gweb.png" alt="1"></a>
+          <!-- <a href="https://www.figma.com/file/sCQhQaf3LQ5B2hulXQC0Nb/Granted?type=design&node-id=0%3A1&t=93jyY9FluiX3rxTw-1" target="_blank"> <img src="./other/Gweb.png" alt="1"></a> -->
+          <img src="./other/Gweb.png" alt="7">
         </div>
         <div class="piece">
-          <a href="https://www.figma.com/file/M9MvJdaK19Hvd9Vbf0Zown/Jolly-Design-Prototype?type=design&node-id=0%3A1&t=qx9VoE17ZlJoMMMC-1" target="_blank"> <img src="./other/Jweb.png" width="350" alt="2"></a>
+          <!-- <a href="https://www.figma.com/file/M9MvJdaK19Hvd9Vbf0Zown/Jolly-Design-Prototype?type=design&node-id=0%3A1&t=qx9VoE17ZlJoMMMC-1" target="_blank"> <img src="./other/Jweb.png" width="350" alt="2"></a> -->
+          <img src="./other/Jweb.png" width="350" alt="8">
         </div>
         <div class="piece">
-          <img src="./other/Jolly.png" alt="3">
+          <img src="./other/Jolly.png" alt="9">
         </div>
       </div>
     </div>
   </div>
 
+  <!-- Enlarge -->
+  <div class="enLarge" id="enLarge">
+    <div id="enLargeStructure">
+      <div id="closeThis">&times;</div>
+      <div class="calledTop">
+        <h2 id="thisCalled"></h2>
+        <img class="thisOne" id="thisOne">
+      </div>
+      <div id="details"></div>
+    </div>
+  </div>
 
 
     <script src="drawings.js"></script>
@@ -81,3 +94,7 @@
 </body>
 
 </html>
+
+
+<!-- Portfolio Slideshow Version:
+https://docs.google.com/presentation/d/1PtG3YzIniPluCiE7PbIvrOfJ0qA8bfIwLWQxtRnlXUc/edit?usp=sharing -->
