--- a/portfolio/drawings.html
+++ b/portfolio/drawings.html
@@ -84,6 +84,7 @@
         <h2 id="thisCalled"></h2>
         <img class="thisOne" id="thisOne">
       </div>
+      <div class="space"></div>
       <div id="details"></div>
     </div>
   </div>
