finalized art showcase

--- a/code port/code.html
+++ b/code port/code.html
@@ -18,25 +18,28 @@
           <a href="../code port/code.html">Code</a>
           <a href="../contact/contact.html">Contact</a>
         </div>
-    </div>
+      </div>
 
-    <div class="title">
-        <h1>CODE SHOWCASE</h1>
-    </div>
     <div class="order">
         <div class="project">
             <h2>Project: KLICKY</h2>
             <div class="case">
                 <div class="show">
-                    <img src="../code port/linklicky.gif" width="650" alt="project 1"> 
+                    <img src="../code port/linklicky.gif" alt="project 1"> 
                 </div>
                 <div class="show">
                     <div class="evidence">
-                        <div class="linkslide" id="linkshow"> 
-                            <a href="https://docs.google.com/presentation/d/1Zzm7Qs5_9GTFmAKwpQTvHf3G5OM4vOT1EWolWaOZswM/edit?usp=sharing" target="_blank"> <img src="../code port/link.png" width="250"></a> 
+                        <div class="linkslide"> 
+                            <a href="https://docs.google.com/presentation/d/1Zzm7Qs5_9GTFmAKwpQTvHf3G5OM4vOT1EWolWaOZswM/edit?usp=sharing" target="_blank"> <img src="../code port/link.png" class="imageFrame"></a> 
+                            <div id="slideText">
+                                <a href="https://docs.google.com/presentation/d/1Zzm7Qs5_9GTFmAKwpQTvHf3G5OM4vOT1EWolWaOZswM/edit?usp=sharing" target="_blank" class="text">Google Slide Presentation</a>
+                            </div>
                         </div> 
-                        <div class="linkgit" id="linkhub"> 
-                            <a href="https://github.com/gschultz49/klicky" target="_blank"> <img src="../code port/linkgit.png" width="250"> </a> 
+                        <div class="linkgit">
+                            <a href="https://github.com/gschultz49/klicky" target="_blank"> <img src="../code port/linkgit.png" class="imageFrame"></a> 
+                            <div id="gitText">
+                                <a href="https://github.com/gschultz49/klicky" target="_blank" class="text" style="color: whitesmoke;">Github Repository</a>
+                            </div>
                         </div> 
                     </div>
                 </div>
@@ -58,14 +61,14 @@
                 <p>2Project this and that</p>
             </div>
         </div>
-        <div class="project">
+        <!-- <div class="project">
             <h2>Name of Project</h2>
             <a href="" target="_blank"> <img src="../portfolio/other/Jolly.png" alt="project 3"> </a>
             <div class="explain">
                 <h4>Project Description</h4>
                 <p>3Project this and that</p>
             </div>
-        </div>
+        </div> -->
 
         <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
         <a class="next" onclick="plusSlides(1)">&#10095;</a>
