--- a/portfolio/drawings.html
+++ b/portfolio/drawings.html
@@ -62,15 +62,13 @@
       </div>
       <div class="artwork">
         <div class="piece">
-          <!-- <a href="https://www.figma.com/file/sCQhQaf3LQ5B2hulXQC0Nb/Granted?type=design&node-id=0%3A1&t=93jyY9FluiX3rxTw-1" target="_blank"> <img src="./other/Gweb.png" alt="1"></a> -->
           <img src="./other/Gweb.png" alt="7">
         </div>
         <div class="piece">
-          <!-- <a href="https://www.figma.com/file/M9MvJdaK19Hvd9Vbf0Zown/Jolly-Design-Prototype?type=design&node-id=0%3A1&t=qx9VoE17ZlJoMMMC-1" target="_blank"> <img src="./other/Jweb.png" width="350" alt="2"></a> -->
-          <img src="./other/Jweb.png" width="350" alt="8">
+          <img src="./other/Jweb.png" alt="8">
         </div>
         <div class="piece">
-          <img src="./other/Jolly.png" alt="9">
+          <img src="./other/portfolioslides.png" alt="9">
         </div>
       </div>
     </div>
