fixed contact page

--- a/code port/code.html
+++ b/code port/code.html
@@ -37,7 +37,7 @@
                         </div> 
                         <div class="linkgit">
                             <a href="https://github.com/gschultz49/klicky" target="_blank"> <img src="../code port/linkgit.png" class="imageFrame"></a> 
-                            <div id="gitText">
+                            <div id="codeText">
                                 <a href="https://github.com/gschultz49/klicky" target="_blank" class="text" style="color: whitesmoke;">Github Repository</a>
                             </div>
                         </div> 
@@ -54,11 +54,34 @@
             </div>
         </div>
         <div class="project">
-            <h2>Name of Project</h2>
-            <a href="" target="_blank"> <img src="../portfolio/other/Jolly.png" alt="project 2"> </a>
+            <h2>Feel ReLeaf</h2>
+            <div class="case">
+                <div class="show">
+                    <img src="../portfolio/other/Jolly.png" alt="project 2">
+                </div>
+                <div class="show">
+                    <div class="evidence">
+                        <div class="cgfslide">
+                            <img src="../portfolio/other/Jolly.png" class="imageFrame">
+                            <div class="slideText">
+                                <a href="https://docs.google.com/presentation/d/1hiWcLpxnhXlikmNwbDribheqNQfGNtTrIN6si_JSe48/edit?usp=sharing" class="text">Google Slide Presentation</a>
+                            </div>
+                        </div>
+                        <div class="cgfcode">
+                            <img src="../portfolio/other/Jolly.png" class="imageFrame">
+                            <div class="codeText">
+                                <a href="https://codepen.io/Judy-Zhang-the-styleful/full/wvQQYmy" class="text">CodePen</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
             <div class="explain">
                 <h4>Project Description</h4>
-                <p>2Project this and that</p>
+                <p>The Feel ReLeaf Project is a mental health awareness website where one is given the opportunity to relieve their deepest darkest secret anonymously or sign up to recieve professional help. This project seconds as 
+                    my Code First Girls Javascript Kickstarter Course graduating project. The website includes a language translation option to be inclusive to people on a global scale. Additionally, the website switches between a typing section and
+                reading section. The website's design is developed to emulate an open space/enviorment where you're able to as the title states `Feel Releaf (Relief)`. On the last day of the course, I presented the website in its final stage of development with working buttons
+                and transitional functions. I concluded the presentation with a demo and graduated from the course with a Completion of the Introduction to Javascript certificate which could be found on my LinkedIn.</p>
             </div>
         </div>
         <!-- <div class="project">
