adjusted contact to a saftey point, need to fill in data and images

--- a/contact/contact.html
+++ b/contact/contact.html
@@ -112,9 +112,10 @@
                 <div class="iconBack">
                     <img src="../portfolio/other/Jolly.png" width="90px">
                 </div>
-                <div class="info">
+                <div class="gitinfo">
                     <h2>Judy Zhang</h2>
-                    <h2><span style="font-weight:100; font-size: 20px;">JudyZhang05</span></h2>
+                    <h3><span style="font-weight:100; font-size: 20px;">JudyZhang05</span></h3>
+                    <p>"Houston we have a problem"</p>
                 </div>
                 <div class="rps">
                     <h3>Repositories</h3>
@@ -125,10 +126,8 @@
                         <p>Klicky</p>
                     </div>
                 </div>
-                <div class="chart">
-                </div>
-                <div class="More">
-                    <h2>More</h2>
+                <div class="more">
+                    <a href="https://github.com/JudyZhang05" target="_blank"><h2>More</h2></a>
                 </div>
             </div>
             <div class="sub" id="emailSub2">
